Fixed some spacing stuff and added a bit of hover effects, kinda weird on cards with view button below but whatever...

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -670,7 +670,7 @@ a:hover {
 /*     Process     */
 /*******************/
 .basic-5 {
-	padding-top: 9.5rem;
+	padding-top: 1.5rem;
 	padding-bottom: 9rem;
 	background: url('../images/process-background.jpg') center center no-repeat;
 	background-size: cover;
